// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers graph ADD_NEIGHBORS_TO_GRAPH adds new values 1`] = `
Object {
  "error": undefined,
  "graph": Object {
    "edges": Array [
      Object {
        "id": "1->-->--2",
        "source": 1,
        "target": 2,
      },
    ],
    "nodes": Array [
      Object {
        "id": 2,
        "value": "2",
        "x": undefined,
        "y": undefined,
      },
      Object {
        "id": 1,
        "value": "1",
      },
    ],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 50,
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
}
`;

exports[`reducers graph ADD_NEIGHBORS_TO_GRAPH does not add duplicate edges or nodes 1`] = `
Object {
  "graph": Object {
    "edges": Array [
      Object {
        "id": "1->-->--2",
        "source": 1,
        "target": 2,
      },
    ],
    "nodes": Array [
      Object {
        "id": 2,
        "value": "2",
      },
      Object {
        "id": 1,
        "value": "1",
      },
    ],
  },
}
`;

exports[`reducers graph ADD_NEIGHBORS_TO_GRAPH merges new values with old 1`] = `
Object {
  "graph": Object {
    "edges": Array [
      Object {
        "id": "1->-->--2",
        "source": 1,
        "target": 2,
      },
      Object {
        "id": "1->-->--3",
        "source": 1,
        "target": 3,
      },
    ],
    "nodes": Array [
      Object {
        "id": 2,
        "value": "2",
      },
      Object {
        "id": 3,
        "value": "3",
        "x": undefined,
        "y": undefined,
      },
      Object {
        "id": 1,
        "value": "1",
      },
    ],
  },
}
`;

exports[`reducers graph SET_GRAPH_PATH adds normal path 1`] = `
Object {
  "error": undefined,
  "graph": Object {
    "edges": Array [
      Object {
        "color": "gray",
        "id": "1->-->--2",
        "source": 1,
        "target": 2,
      },
      Object {
        "color": "gray",
        "id": "2->-->--3",
        "source": 2,
        "target": 3,
      },
    ],
    "nodes": Array [
      Object {
        "id": 1,
        "label": "1",
      },
      Object {
        "id": 2,
        "label": "2",
      },
      Object {
        "id": 3,
        "label": "3",
      },
    ],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 50,
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
}
`;

exports[`reducers graph SET_GRAPH_PATH clears graph if it's already there 1`] = `
Object {
  "graph": Object {
    "edges": Array [],
    "nodes": Array [
      Object {
        "id": 1,
        "label": "1",
      },
    ],
  },
}
`;

exports[`reducers graph initializes with correct state 1`] = `
Object {
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 50,
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
}
`;
